Compiler/testdata/prometheus-tests/negatives/Negative5.java
class Klasse1 {
	public int method() {
		/* Missing Statement */
		while(true)
	}
}
